feat: Integrate Sanity.io as CMS
- Install @sanity/client and @sanity/image-url
- Add sanity/schemas/ with product, project, testimonial, settings types
- Add sanity/sanity.config.ts for Studio configuration
- Add lib/sanity/client.ts, image.ts, queries.ts with GROQ queries
- Update app pages to fetch from Sanity with static content fallbacks
- Add export const revalidate = 3600 to all dynamic pages
- Add /api/revalidate webhook route for instant ISR on publish
- Add cdn.sanity.io to next.config.mjs image remote patterns
- Update apphosting.yaml with Sanity env vars (project o5014ckj)
- Update .env.example and .env.local with Sanity variables
- Exclude sanity/ folder from Next.js tsconfig compilation
- Fix integration test to use static content instead of removed mock adapter

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -13,3 +13,26 @@ env:
     value: contact@tradim.mr
     availability:
       - RUNTIME
+  - variable: NEXT_PUBLIC_SANITY_PROJECT_ID
+    value: o5014ckj
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: NEXT_PUBLIC_SANITY_DATASET
+    value: production
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: NEXT_PUBLIC_SANITY_API_VERSION
+    value: "2024-01-01"
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: SANITY_API_TOKEN
+    secret: SANITY_API_TOKEN
+    availability:
+      - RUNTIME
+  - variable: SANITY_REVALIDATE_SECRET
+    secret: SANITY_REVALIDATE_SECRET
+    availability:
+      - RUNTIME
