--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@sanity/client": "^7.16.0",
+    "@sanity/image-url": "^2.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "^14.2.35",
